--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.4",
     "@trpc/client": "next",
     "@trpc/server": "next",
+    "arctic": "^1.9.2",
+    "better-sqlite3": "^11.1.2",
+    "lucia": "^3.2.0",
     "solid-js": "^1.8.18",
     "valibot": "^0.36.0",
     "vinxi": "^0.3.14"
@@ -20,6 +24,7 @@
     "node": ">=18"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3"
+    "@biomejs/biome": "1.8.3",
+    "@types/better-sqlite3": "^7.6.11"
   }
 }
