--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.4",
+    "@tailwindcss/vite": "^4.0.0-alpha.17",
     "@trpc/client": "next",
     "@trpc/server": "next",
     "solid-js": "^1.8.18",
+    "tailwindcss": "^4.0.0-alpha.17",
     "valibot": "^0.36.0",
     "vinxi": "^0.3.14"
   },
